fist touches to page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,71 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Onur Karacalı</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/page.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<section class="page-wrap">
+    <section class="page-center">
 
+        <div class="starting-myself">
+
+            <div class="hello-world">
+
+                <div class="hi-wrap">
+
+                    <div class="hi-text">
+                        <h1>Hi!</h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="heading-name-of-me">
+                    <h1>Onur Karacalı</h1>
+                    <h4>Software Engineer - Passionate Developer - Open Source Lover &#9829 </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact-info-area">
+
+            <table class="contact-table">
+                <tr>
+                    <td>
+                        Phone(GSM) :
+                    </td>
+                    <td>
+                        +90-551-429-76-68
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>
+                        Lives in Istanbul / Turkey
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="experiments-area">
+
+        </div>
+
+        <div class="technical-info-area">
+
+        </div>
+
+        <div class="interests-area">
+
+        </div>
+
+        <div class="gif-wrap">
+            <iframe src="//giphy.com/embed/TlK63EQERmiAVzMEgO4?html5=true" width="480" height="270" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+    </section>
+</section>
 </body>
 </html>
