fist touches to page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
             <table class="contact-table">
                 <tr>
+                    <td>Email :</td>
+                    <td>org.o.karacali@gmail.com</td>
+                </tr>
+                <tr>
                     <td>
                         Phone(GSM) :
                     </td>
