fist touches to page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                 </tr>
                 <tr>
                     <td>
-                        Lives in Istanbul / Turkey
+                        Lives in
+                    </td>
+                    <td>
+                        Istanbul / Turkey
                     </td>
                 </tr>
             </table>
@@ -68,7 +71,7 @@
         </div>
 
         <div class="gif-wrap">
-            <iframe src="//giphy.com/embed/TlK63EQERmiAVzMEgO4?html5=true" width="480" height="270" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+
         </div>
     </section>
 </section>
