fist touches to page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Onur Karacalı</title>
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/page.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <section class="page-wrap">
@@ -32,7 +33,9 @@
         </div>
 
         <div class="contact-info-area">
-
+            <div class="contact-header">
+                Contact to me!
+            </div>
             <table class="contact-table">
                 <tr>
                     <td>Email :</td>
