mail address change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <table class="contact-table">
                 <tr>
                     <td>Email :</td>
-                    <td>org.o.karacali@gmail.com</td>
+                    <td>onurkrcli@gmail.com</td>
                 </tr>
                 <tr>
                     <td>
